se le hizo modificaciones

--- a/Evaluacion/evaluacion.html
+++ b/Evaluacion/evaluacion.html
@@ -6,27 +6,25 @@
 	<meta>
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 	<script src="https://kit.fontawesome.com/c26a7d38a4.js" crossorigin="anonymous"></script>
-	
-<body>
-<nav class =caja>
-	<div class="container-fluid">
-	<div class="row cloud">
-		
-		<i class="fa-solid fa-user"></i>
-                    <input type="text" placeholder="Usuario">
-                </article><br>
 
-                <article class="ingreso-box">
-                    <i class="fa-solid fa-lock"></i>
-                    <input type="password" placeholder="contraseña"><br>
-                </article>
+<body>
+	<div class="container-fluid">
+		<div class="row">
+				<div class="ingreso-box">
+					<i class="fa-solid fa-user"></i>
+					<input type="text" placeholder="Usuario">
+				</div>
+				<br>
+				<div class="ingreso-box">
+					<i class="fa-solid fa-lock"></i>
+					<input type="password" placeholder="contraseña">
+				</div>
+			<div class="boton">
+				<button type="submit" class="btn btn-primary">Guardar </button>
+				<button type="submit" class="btn btn-primary">Enviar </button>
+			</div>
 	</div>
-	<div class="boton">
-		<button type="submit" class="btn btn-primary">Guardar </button>
-		<button type="submit" class="btn btn-primary">Enviar </button>
-	</div>
-	</div>
-</nav>
-</body>	
+</body>
 </head>
+
 </html>
